{
  "version": 4,
  "terraform_version": "1.8.4",
  "serial": 173,
  "lineage": "1a2511fc-e187-00e9-a861-8b6407e7f863",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492202498:security-group/sg-0c3cb389bff077809",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c3cb389bff077809",
            "ingress": [],
            "name": "terraform-20240529160855128100000006",
            "name_prefix": "terraform-",
            "owner_id": "381492202498",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mybday-sg"
            },
            "tags_all": {
              "Name": "mybday-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-083e7a844007e290d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "new-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492202498:internet-gateway/igw-04b98b300a2c40432",
            "id": "igw-04b98b300a2c40432",
            "owner_id": "381492202498",
            "tags": {
              "Name": "mybday-igw"
            },
            "tags_all": {
              "Name": "mybday-igw"
            },
            "vpc_id": "vpc-083e7a844007e290d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "new-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492202498:route-table/rtb-0c70f16be3c5d5f80",
            "id": "rtb-0c70f16be3c5d5f80",
            "owner_id": "381492202498",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04b98b300a2c40432",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mybday-rtb"
            },
            "tags_all": {
              "Name": "mybday-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-083e7a844007e290d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.new-igw",
            "module.vpc.aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "new-rtb-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-022809615d4bf369b",
            "route_table_id": "rtb-0c70f16be3c5d5f80",
            "subnet_id": "subnet-0852e7a8d7c5e8981"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.new-igw",
            "module.vpc.aws_route_table.new-rtb",
            "module.vpc.aws_subnet.subnets",
            "module.vpc.aws_vpc.main-vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f278eda61fe63da8",
            "route_table_id": "rtb-0c70f16be3c5d5f80",
            "subnet_id": "subnet-0f1fc583f75b7ff9d"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.new-igw",
            "module.vpc.aws_route_table.new-rtb",
            "module.vpc.aws_subnet.subnets",
            "module.vpc.aws_vpc.main-vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492202498:subnet/subnet-0852e7a8d7c5e8981",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0852e7a8d7c5e8981",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "381492202498",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mybday-subnet-0"
            },
            "tags_all": {
              "Name": "mybday-subnet-0"
            },
            "vpc_id": "vpc-083e7a844007e290d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main-vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492202498:subnet/subnet-0f1fc583f75b7ff9d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f1fc583f75b7ff9d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "381492202498",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mybday-subnet-1"
            },
            "tags_all": {
              "Name": "mybday-subnet-1"
            },
            "vpc_id": "vpc-083e7a844007e290d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main-vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492202498:vpc/vpc-083e7a844007e290d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-065fcd2f72f90125f",
            "default_route_table_id": "rtb-017401be3548434de",
            "default_security_group_id": "sg-04d388f52b870b9a5",
            "dhcp_options_id": "dopt-038c7659c026218f9",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-083e7a844007e290d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-017401be3548434de",
            "owner_id": "381492202498",
            "tags": {
              "Name": "mybday-vpc"
            },
            "tags_all": {
              "Name": "mybday-vpc"
            }
          }
        }
      ]
    }
  ]
}